# django-todo-item-api-demo

./: pyproject.toml
hello/: views.py
todo_rest_api/: apps.py  models.py  schema.py  serializers.py  types.py  urls.py  views.py
todo_rest_api/migrations/: 0001_initial.py
web_project/: settings.py  urls.py
